<resources>
    <string name="app_name">Mobe</string>
    <string name="logo_desc">Mobe LOGO</string>
    <string name="loading">Loading…</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_connection_msg">No internet connection detected or poor connectivity.Please check your connection</string>
    <string name="connect">OK</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="goregister">Not registered yet? Sign up here…</string>
    <string name="gologin">Go To Sign in Page…</string>
    <string name="confirm_exit">Exit?</string>
    <string name="confirm_exit_msg">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="et_id">Email</string>
    <string name="et_pass">Password</string>
    <string name="et_fname">First Name</string>
    <string name="et_lname">Last Name</string>
    <string name="et_dob">Date of Birth</string>
    <string name="manager">Yes, I am a Manager</string>
    <string name="approve">Your account hasn\'t been approved yet. Please wait for the response from the office.\n Thank You.</string>
    <string name="noact">No activity found on your performance. Please come back later to see your report.\n Thank You.</string>
    <string name="noemp">No Employee found under your department. Please set your department name from settings if you have not set your department yet.\n Thank You.</string>
    <string name="setup">Please wait\n While we are setting up your profile</string>
    <string name="newsfeed">Please wait\n While we are loading your newsfeed</string>
    <string name="empty">Nothing to show. Please come back later</string>
    <string name="save">Save</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="spinner">Please Select Your Department</string>

    <!--warning-->
    <string name="wardept">Once you save the department, you can\'t change later.</string>

    <!--Label-->
    <string name="hello">Hello, </string>
    <string name="none">null</string>
    <string name="gday">Good Day Manager ! Rate Now..</string>
    <string name="dept">Please set your department</string>
    <string name="pass">Change Password</string>
    <string name="empday">Here is your performance so far!</string>
    <string name="share">Share your mood with Emoji. Let your colleagues to see.</string>

</resources>
