<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_reg"
    android:background="@color/colorPrimary"
    tools:context="akash.com.mobe.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/logo"
                android:contentDescription="@string/logo_desc"/>

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/progress"
                android:layout_width="@dimen/circular"
                android:layout_height="@dimen/circular"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                app:mpb_progressStyle="circular"
                app:mpb_indeterminateTint="@color/colorAccent"
                app:mpb_progressTint = "@color/colorAccent"
                android:visibility="invisible"
                style="@style/Widget.MaterialProgressBar.ProgressBar" />

            <RelativeLayout
                android:id="@+id/layout_hide"
                android:layout_below="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_fname"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/et_fname"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_fname"
                        android:layout_width="@dimen/et_tv_btn"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/input_layout_fname"
                    android:id="@+id/input_layout_lname"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/et_lname"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_lname"
                        android:layout_width="@dimen/et_tv_btn"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/input_layout_lname"
                    android:id="@+id/input_layout_dob"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/et_dob"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_dob"
                        android:layout_width="@dimen/et_tv_btn"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_below="@+id/input_layout_dob"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/et_id"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="@dimen/et_tv_btn"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pass"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/et_pass"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/input_layout_email"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_pass"
                        android:layout_width="@dimen/et_tv_btn"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:layout_marginTop="@dimen/tendp"
                    android:text="@string/manager"
                    android:textColor="@color/text"
                    android:textSize="@dimen/btn"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_pass"
                    android:id="@+id/cb_manager"/>

                <Button
                    android:layout_marginTop="@dimen/tendp"
                    android:id="@+id/btn_reg"
                    android:layout_width="@dimen/et_tv_btn"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:layout_below="@id/cb_manager"
                    android:layout_centerHorizontal="true"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/btnLogin"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_marginTop="@dimen/tendp"
                    android:layout_width="@dimen/et_tv_btn"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_reg"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:text="@string/gologin"
                    android:textSize="@dimen/btn"
                    android:textColor="@color/colorAccent"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
