<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_login"
    android:background="@color/colorPrimary"
    tools:context="akash.com.mobe.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_marginTop="@dimen/margin_def"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo_desc"/>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress"
            android:layout_width="@dimen/circular"
            android:layout_height="@dimen/circular"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:mpb_progressStyle="circular"
            app:mpb_indeterminateTint="@color/colorAccent"
            app:mpb_progressTint = "@color/colorAccent"
            android:visibility="invisible"
            style="@style/Widget.MaterialProgressBar.ProgressBar" />

        <RelativeLayout
            android:id="@+id/layout_hide"
            android:layout_below="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_id"
                android:layout_marginTop="@dimen/margin_def"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/et_id"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_id"
                    android:layout_width="@dimen/et_tv_btn"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pass"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/et_pass"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_below="@+id/input_layout_id"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_pass"
                    android:layout_width="@dimen/et_tv_btn"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/et_tv_btn"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_below="@+id/input_layout_pass"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/btnLogin"/>

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="@dimen/et_tv_btn"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:text="@string/goregister"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/btn"
                android:layout_marginTop="@dimen/margin_def"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
